--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.shpota'
@@ -10,10 +11,22 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.slf4j:slf4j-simple:2.0.6'
+    implementation 'org.sol4k:sol4k:0.3.2'
+    implementation 'io.javalin:javalin:5.4.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    // Define the main class for the jar file
+    manifest {
+        attributes 'Main-Class': 'com.shpota.Main'
+    }
 }
